--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,21 +5,31 @@ plugins {
 
 android {
     namespace "com.intocables.memoflip"
-    compileSdk 34
+    compileSdk 35
     
     defaultConfig {
         applicationId "com.intocables.memoflip"
         minSdkVersion 21
-        targetSdkVersion 34
-        versionCode 33
-        versionName "1.5.0"
+        targetSdkVersion 35
+        versionCode 39
+        versionName "1.9.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    signingConfigs {
+        release {
+            storeFile file('../memoflip-release-key.keystore')
+            storePassword 'MemoFlip2024!'
+            keyAlias 'memoflip'
+            keyPassword 'MemoFlip2024!'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     
